wordpress-ameasalong/wordpress-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress
  namespace: wordpress-ameasalong
spec:
  serviceName: wordpress
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: data
      volumes:
        - name: data
          nfs:
            path: /export/Kubernetes/wordpress/ameasalong
            server: 192.168.86.107
