wordpress-ameasalong/wordpress-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress
  namespace: wordpress-ameasalong
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`staging.ameasalong.se`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
